--- a/src/libANGLE/renderer/vulkan/vk_internal_shaders_autogen.gni
+++ b/src/libANGLE/renderer/vulkan/vk_internal_shaders_autogen.gni
@@ -10,5 +10,5 @@
 
 angle_vulkan_internal_shaders = [
   "shaders/gen/FullScreenQuad.vert.inc",
-  "shaders/gen/PushConstantColor.frag.inc",
+  "shaders/gen/PushConstantColor.frag.inc"
 ]
