--- a/BUILD.gn
+++ b/BUILD.gn
@@ -108,6 +108,15 @@ config("extra_warnings") {
   }
 }
 
+# This config adds build-ids to the associated library.
+# -Wl is a special option that indicates that clang should pass the associated
+# option --build-id to the linker. This will cause a build-id section to be added
+# to the associated. The build-id makes it possible for a debugger to find the right
+# symbol file to use.
+config("build_id_config") {
+  ldflags = [ "-Wl,--build-id" ]
+}
+
 if (is_win) {
   copy("copy_compiler_dll") {
     sources = [
@@ -629,6 +638,7 @@ shared_library("libGLESv2${angle_libs_suffix}") {
     ":debug_annotations_config",
     ":extra_warnings",
     ":internal_config",
+    ":build_id_config",
   ]
 
   defines = [ "LIBGLESV2_IMPLEMENTATION" ]
@@ -691,6 +701,7 @@ shared_library("libGLESv1_CM${angle_libs_suffix}") {
     ":debug_annotations_config",
     ":extra_warnings",
     ":internal_config",
+    ":build_id_config",
   ]
 
   defines = []
@@ -744,6 +755,7 @@ shared_library("libEGL${angle_libs_suffix}") {
     ":debug_annotations_config",
     ":extra_warnings",
     ":internal_config",
+    ":build_id_config",
   ]
 
   defines = [ "LIBEGL_IMPLEMENTATION" ]
