--- a/BUILD.gn
+++ b/BUILD.gn
@@ -520,7 +520,7 @@ static_library("libANGLE") {
       sources +=
           rebase_path(gles_gypi.libangle_gl_egl_android_sources, ".", "src")
       libs += [
-        "android",
+        "nativewindow",
         "log",
       ]
     }
@@ -855,7 +855,7 @@ foreach(is_shared_library,
       sources += rebase_path(util_gypi.util_linux_sources, ".", "util")
       sources += rebase_path(util_gypi.util_android_sources, ".", "util")
       libs = [
-        "android",
+        "nativewindow",
         "log",
       ]
     }
